# OOP

./: CMakeLists.txt  build.bat  final_test_client.cpp  test_json_client.cpp
build_vs/: CMakeCache.txt
client/: MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
common/: Complex.cpp  Complex.h  FileProtocol.h  Polynom.cpp  Polynom.h
server/: FileServer.cpp  FileServer.h  QtServer.cpp  QtServer.h  Server.h  main.cpp
